Fix: Related To name display in transaction PDF export

--- a/.env.example
+++ b/.env.example
@@ -24,9 +24,9 @@ LOG_LEVEL=error
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=yssc_db
-DB_USERNAME=your_database_user
-DB_PASSWORD=your_database_password
+DB_DATABASE=123456789
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
